--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <!-- CONFIGURAÇÕES -->
         <meta charset="UTF-8">
         <title>Titulo</title>
+        <style>
+            a {
+                color:black;
+                text-decoration: none;
+            }
+        </style>
+        <link href="css/style.css" rel="stylesheet">
     </head>
 
     <body>
@@ -12,5 +19,6 @@
         <a href="https://www.google.com/">Google</a><br>
         <a href="outro.html">Outra pagina do site</a><br>
         <a href="#ID">Alguma Parte da Página</a>
+
     </body>
-</html> 
+</html>
