fim da aula 8/5

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <!-- CONTEÚDO -->
-        <a href="">PRA NADA</a><br>
+        <a class="texto-rosa" href="">PRA NADA</a><br>
         <a href="https://www.google.com/">Google</a><br>
         <a href="outro.html">Outra pagina do site</a><br>
         <a href="#ID">Alguma Parte da Página</a>
